--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,7 @@
     <string name="my_booking">My Booking</string>
     <string name="view_session">View Session</string>
     <string name="booking_history">Booking History</string>
+    <string name="title_activity_my_booking">MyBookingActivity</string>
+    <string name="title_activity_profile">ProfileActivity</string>
+    <string name="title_activity_available_sessions">AvailableSessionsActivity</string>
 </resources>
