--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="title_activity_my_booking">MyBookingActivity</string>
     <string name="title_activity_profile">ProfileActivity</string>
     <string name="title_activity_available_sessions">AvailableSessionsActivity</string>
+    <string name="title_activity_booking_history">BookingHistoryActivity</string>
 </resources>
