Login page + Home page front end complete

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,33 @@
     <string name="title_activity_available_sessions">AvailableSessionsActivity</string>
     <string name="title_activity_booking_history">BookingHistoryActivity</string>
     <string name="available_sessions">Available Sessions</string>
+    <string name="change_profile_picture">Change Profile Picture</string>
+    <string name="edit_profile">Edit Profile</string>
+    <string name="update_profile">Update Profile</string>
+    <string name="student_name">Student Name:</string>
+    <string name="timothy_dalton">Timothy Dalton</string>
+    <string name="email">Email:</string>
+    <string name="preferred_first_name">Pref First Name:</string>
+    <string name="faculty">Faculty:</string>
+    <string name="engineering_and_information_technology">Engineering and Information Technology</string>
+    <string name="course">Course:</string>
+    <string name="c10219">C10219</string>
+    <string name="dummy_email">12345678@uts.edu.au</string>
+    <string name="phone">Phone:</string>
+    <string name="dummy_number">0423456789</string>
+    <string name="dob">DOB:</string>
+    <string name="dummy_dob">31/01/1997</string>
+    <string name="gender">Gender:</string>
+    <string name="female">Female</string>
+    <string name="male">Male</string>
+    <string name="unspecified">Unspecified</string>
+    <string name="degree">Degree:</string>
+    <string name="undergraduate">Undergraduate</string>
+    <string name="postgraduate">Postgraduate</string>
+    <string name="year">Year:</string>
+    <string name="status">Status:</string>
+    <string name="permanent">Permanent</string>
+    <string name="international">International</string>
+    <string name="first_language">First Language:</string>
+    <string name="country_of_origin">Country of Origin:</string>
 </resources>
