Front End Complete - Login, Home, View Sessions (home)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,4 +47,14 @@
     <string name="international">International</string>
     <string name="first_language">First Language:</string>
     <string name="country_of_origin">Country of Origin:</string>
+    <string name="communication">Communication</string>
+    <string name="writing_skills">Writing Skills</string>
+    <string name="reading_skills">Reading Skills</string>
+    <string name="speaking_skills">Speaking Skills</string>
+    <string name="listening_skills">Listening Skills</string>
+    <string name="upass">UPASS</string>
+    <string name="programming">Programming</string>
+    <string name="data_structure">Data Structure</string>
+    <string name="interaction_design">Interaction Design</string>
+    <string name="software_architecture">Software Architecture</string>
 </resources>
