Front End Complete - Login, Home, View Sessions (home), History, Bookings

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -88,4 +88,6 @@
     <string name="about_helps">About HELPS</string>
     <string name="helps_text">Higher Education Language and Presentation Support (HELPS) provides non-credited English language and academic literacy support to UTS undergraduate and postgraduate coursework students.</string>
     <string name="helps_text2">At HELPS, we can enhance your learning experience by providing individual and group support in a friendly and respectful environment. We can also help you become an independent and confident learner through the development of your English language and academic understanding, so you can reach your study and career goals.</string>
+    <string name="helps_phone">Phone: (02) 9514 9733</string>
+    <string name="helps_email">Email: helps@uts.edu.au</string>
 </resources>
