--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -94,4 +94,5 @@
     <string name="title_activity_session_details">SessionDetails</string>
     <string name="section_format">Hello World from section: %1$d</string>
     <string name="attendance_recorded">Attendance Recorded</string>
+    <string name="submit">Submit</string>
 </resources>
