session details layout set

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -95,4 +95,5 @@
     <string name="section_format">Hello World from section: %1$d</string>
     <string name="attendance_recorded">Attendance Recorded</string>
     <string name="submit">Submit</string>
+    <string name="book_session">Book Session</string>
 </resources>
