--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -99,4 +99,5 @@
     <string name="title_activity_sign_up">SignUpActivity</string>
     <string name="registration">Registration</string>
     <string name="register">Register</string>
+    <string name="workshop">Workshop</string>
 </resources>
