--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -154,4 +154,5 @@
         <item>7 days prior session</item>
     </string-array>
     <string name="title_activity_all_sessions">AllSessionsActivity</string>
+    <string name="id_8_numbers">Your student id should match 8 number</string>
 </resources>
